Game at first stage playable

--- a/src/index.haml
+++ b/src/index.haml
@@ -1,6 +1,9 @@
 !!!
 %html
   %head
+    %link{rel: 'stylesheet', type: "text/css", href: "./index.css"}
     %script{type: "text/javascript", src: "http://localhost:1337/livereload.js"}
-  %body{style: "overflow: hidden; cursor: none; margin: 0; padding: 0;"}
+  %body
+    #startGame
+      Start Game
     %script{type: "text/javascript", src: "./app.js"}
