--- a/src/index.haml
+++ b/src/index.haml
@@ -4,6 +4,9 @@
     %link{rel: 'stylesheet', type: "text/css", href: "./index.css"}
     %script{type: "text/javascript", src: "http://localhost:1337/livereload.js"}
   %body
-    #startGame
-      Start Game
+    #mainMenu
+      %button#startGame
+        Start Game
+      %button#hammerColor
+        Hammer Color
     %script{type: "text/javascript", src: "./app.js"}
