--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -8,10 +8,38 @@ body {
   top: 50%;
   left: 25%;
   transform: translate(-50%, -50%);
+  
+  button {
+    padding: 15px;
+    margin: 5px;
+    background: white;
+  }
 }
 
-#mainMenu > button {
-  padding: 15px;
-  margin: 5px;
+#highScoreForm {
+  position: fixed;
   background: white;
+  top: 50%;
+  left: 50%;
+  padding: 20px;
+  transform: translate(-50%, -50%);
+  
+  .form{
+    width: 205px;
+    margin: auto;
+    * {
+      display: block;
+      box-sizing: border-box;
+      width: 100%;
+      text-align: center;
+    }
+    input{
+      text-transform: uppercase;
+      font-size: 80px;
+      width: 205px;
+    }
+    button {
+      font-size: 30px;
+    }
+  }
 }
